New, more descriptive title

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -355,7 +355,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Identifying faults with CrashSimulator}
+\title{Identifying Environment Induced Faults Through System Call Trace Analysis, Mutation and Replay}
 
 
 % author names and affiliations
