Added first cut at caption to diagram

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -3,7 +3,11 @@
     \begin{figure*}[t]
         \center{}
         \fbox{\includegraphics[scale=.5]{Architecture}}
-        \caption{CrashSimulator Architecture}
+        \caption{CrashSimulator Architecture: The process of gathering anomalous traces and the process of performing\\
+        tests based on those traces are separate. Traces can be gathered ahead of time and used for testing later.\\
+        Similarly, testing can performed repeatedly using the same set of traces. In this way, CrashSimulator can be\\
+        used like a suite of unit tests.}
+
     \end{figure*}
 
     \subsection{Architecture}
