--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -68,6 +68,7 @@
 \usepackage{tabu}
 \usepackage{float}
 \usepackage{graphicx}
+\usepackage{caption}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
