Changes before commit

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -1,6 +1,5 @@
 % TODO: Evaluation: Time the amount of time to run the tests
 % TODO: Evaluation: Count how many anomalies could be injected into a particular trace
-% TODO: Evaluation: How many of these are useful
 % TODO: Evaluation: Threats to validity
 %     Programming languages of test applications
 % TODO: Do different input trace applications have an effect?
@@ -385,3 +384,7 @@
             modify system calls made by the interpreter for purposes that are independent from the application under
             test.  If this results results in improper output CrashSimulator will simply report it as a fault in the
             application despite the fact that the user's code was not responsible for the error.
+
+        \paragraph{Replay of System Call Traces for Complex Applications}
+
+
